--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,21 @@
 [project]
 name = "bdo-empire"
-version = "0.1.0"
+version = "0.1.1"
 description = "Worker empire optimizer for BDO using HiGHS mip solver."
 authors = [
     {name = "Thell 'Bo' Fowler", email = "thell@tbfowler.net"},
 ]
 
 dependencies = [
+    "certifi>=2024.8.30",
+    "CTkToolTip>=0.8",
     "customtkinter>=5.2.2",
+    "highspy>=1.7.2",
     "natsort>=8.4.0",
     "networkx>=3.3",
+    "psutil>=6.0.0",
     "pulp>=2.9.0",
     "tabulate>=0.9.0",
-    "CTkToolTip>=0.8",
-    "highspy>=1.7.2",
-    "psutil>=6.0.0",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
